--- a/src/components/custom-button/custom-button.style.scss
+++ b/src/components/custom-button/custom-button.style.scss
@@ -22,7 +22,11 @@
     &.google-sign-in {
     background-color: #4285f4;
     color: white;
-    
+    &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+    }
     &:hover{
     background-color: #357ae8;
     border:none
